--- a/yappa/Content/app.css
+++ b/yappa/Content/app.css
@@ -1,10 +1,7 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500|Pacifico);
 body, html {
-    /*height: 100%;
-    width: 100%;*/
-    /*background: #666 url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/grey_wash_wall.png);*/
 }
-*, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto',sans-serif;
     font-weight: 300;
 }
@@ -13,87 +10,8 @@ section {
     padding: 20px 0;
 }
 
-.nav > li > a {
-    padding: 10px 50px;
-}
-
 .app {
     max-width: 640px;
     padding: 0 5% 0 5%;
     margin: 0 auto;
-}
-
-.navbar-toggle {
-  float: left;
-    display: block;
-  margin-left: 30px;
-  margin-top: 30px;
-  background: #dd4814;
-}
-
-.navbar-right {
-    margin-right: 30px;
-    margin-top: 30px;
-    float: right;
-}
-
-.navbar-brand {
-    color: #dd4814;
-    font-size: 2em;
-    font-weight: 500;
-}
-
-.navbar-login {
-    color: white;
-    padding: 10px 20px;
-}
-
-.navbar-login:hover {
-    color: white;
-}
-
-.jumbotron {
-    width: 100%;
-    height: auto;
-    background-size: cover;
-    background: 0 0;
-    color: #ffffff;
-    margin: 0;
-    padding-top: 150px;
-}
-
-    .jumbotron p {
-        padding: 20px 0;
-    }
-
-    .jumbotron h2 {
-        margin-top: 100px;
-    }
-
-@media(min-width:767px) {
-    .jumbotron, .canvas {
-        height: 100%;
-    }
-}
-
-@media (min-width: 768px) {
-    .navbar {
-        padding: 20px;
-        border-bottom: 0;
-        letter-spacing: 1px;
-        min-height: 0;
-        margin-bottom: 0;
-    }
-
-    .container {
-        max-width: 640px;
-    }
-
-    .addAlert .input-group {
-        margin-bottom: 10px;
-    }
-
-    .intro .form-control, .addAlert button {
-        margin-bottom: 20px;
-    }
 }
